--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello to you all
+<html>
+ <head>
+  <title>PHP Test</title>
+ </head>
+ <body>
+   hello
+ <?php echo '<p>Hello World</p>'; ?>
+ </body>
+</html>
